<resources>
    <!-- VekHistories -->
    <string name="app_name">appRevisao</string>
    <string name="txtNome">Nome: </string>
    <string name="txtBairro">Bairro: </string>
    <string name="txtCep">CEP: </string>
    <string name="txtEndereco">Endereço: </string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="title">Cadastro</string>
    <string name="btnVoltar">Voltar</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="title2">Confirmação dos Dados</string>
</resources>