<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:text="@string/title2"
        android:textAlignment="center"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp"
        android:textSize="25dp"
        android:text="@string/txtNome"/>

    <TextView
        android:id="@+id/respNome"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/txtEndereco"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:text="@string/txtEndereco"/>

    <TextView
        android:id="@+id/respEndereco"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/txtBairro"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:text="@string/txtBairro"/>

    <TextView
        android:id="@+id/respBairro"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/txtCep"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:text="@string/txtCep"/>

    <TextView
        android:id="@+id/respCep"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnVoltar" />

</LinearLayout>


